fix: layers and z-indexes

--- a/src/components/popups/popup.component.css
+++ b/src/components/popups/popup.component.css
@@ -1,5 +1,5 @@
 .rootClassName {
-    z-index: 2147483648;
+    z-index: 2147483641;
     position: fixed;
     top: 0;
     left: 0;
