--- a/src/components/toolbars/draggable-toolbar/draggable-toolbar.component.css
+++ b/src/components/toolbars/draggable-toolbar/draggable-toolbar.component.css
@@ -3,5 +3,5 @@
     height: 50px;
     display: flex;
     background: #292A2E;
-    z-index: 2147483647;
+    z-index: 2147483640;
 }
