--- a/src/components/toolbars/minimized-toolbar/minimized-toolbar.component.css
+++ b/src/components/toolbars/minimized-toolbar/minimized-toolbar.component.css
@@ -5,6 +5,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2147483647;
+    z-index: 2147483640;
     cursor: pointer;
 }
